20230103
*Fix bug about checking installed packages

20230102
*Fix bug about getting ports directory

20230101
*Fix bug "-x" option with "-dd" ("-RR") option

20221228
*More fix bug about "-N" option

20221227
*If "-N" only set, don't install binary packages.
*More strictly dependencies checking for "-dd" or "-RR" option

20221225
*More speedup checking dependencies about "-dd", "-RR" option by parallel execution

20221223
*Add "--nocleandeps" option. Don't clean PKG_REPLACE_DB_DIR directory

20221222
*Option "-dd" or "-RR", as fast as possible and strictly checking dependencies

20221217
*Fix bugs related "-P" or "-PP" option
 If binary package file exists,
 pkg_replace gets dependencies from it.

20221216
*Fix bugs related "-PP" option

20221215
*Fix bugs in find_package() and get_binary_pkgname()

20221214
*Fix bug in main()

20221212
*Fix bug in find_package()

20221206
*Cleanup code
*Add -dd, -RR options for strictly checking dependencies
*Fix bugs

20221128
*Fix dependencies checking in get_depend_pkgnames() and get_require_pkgnames()

20221012
*Fix PKG_SUFX warning message

20221011
*Fix bug about PKG_SUFX

20220304
*Fix bugs for new package suffix

20220303
*Fix bug clean_libs()

20210726
*Support new package suffix .pkg

20200821
*Fix bug in function install_package: install_args -> _install_args

20200803
*Add --exclude option
*Speed up packages version checking

20200717
*Fix bug checking FLAVORS
*Fix underscore missing

20200623
*If pkg_binary is set, do not run make_config and make_config_conditional
*Cleanup code

20200622
*Fix flavor check in set_pkginfo_install and set_pkginfo_replace
*Cleanup code

20200618
*Fix bug in set_pkginfo_replace
*Fix typo PORTSIR->PORTSDIR in parse_moved

20200602
*Fix bug check package's dependencies

20200522
*Fix bugs for origin and path
*Cleanup code
*Support FLAVORS 'origin@flavor'
  See pkg_replace(1)

20200504
* Support OVERLAYS

20200309
* Support FLAVOR